--- a/pom.xml
+++ b/pom.xml
@@ -131,5 +131,22 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.jongo</groupId>
+            <artifactId>jongo</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.metamodel</groupId>
+            <artifactId>MetaModel-core</artifactId>
+            <version>4.5.5</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.metamodel</groupId>
+            <artifactId>MetaModel-jdbc</artifactId>
+            <version>4.5.5</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
