--- a/pom.xml
+++ b/pom.xml
@@ -133,5 +133,10 @@
             <artifactId>mapdb</artifactId>
             <version>3.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.4</version>
+        </dependency>
     </dependencies>
 </project>
